Version 1.27
   *Support for SAM/BAM files in which the sequence is given as "*".
   This will return a completely ambiguous read (NNNNNNNN) of the proper length.

Version 1.26
   * Added support for samtools >= 0.1.9 is_refskip field in pileups.

Version 1.25
   * Removed debugging warning in get_feature_by_id().
   * Identify version-specific samtools installs where the prefix is xyz and the
     include/lib files are in xyz/include and xyz/lib (Contributed by John Marshall).

Version 1.24
   * More revisions needed to run tests succssfully. Sorry!

Version 1.23
   * added missing files needed for the multi-gaps test introduced in 1.22.
 
Version 1.22

    * fix/test for 'incomplete cigar/split alignments processing of
      multi-gaps' (https://sourceforge.net/tracker/?func=detail&aid=3083769&group_id=27707&atid=391291)"

Version 1.21
    * Fixed the AlignWrapper->can() method, which was causing crashes with GBrowse2.

Version 1.20
    * Added Bio::DB::Tam->header_read() method.

Version 1.19
    * Added Bio::DB::Bam::Alignment->mate_seq_id() method.	
    * Added Bio::DB::Bam::Alignment->aux() method.	
    * Added Bio::DB::Bam::Alignment->tam_line() method.
    * Fixed Bio::DB::Bam::Alignment->cigar_str() method to return fields in correct order! (bad bug)	

Version 1.18
    * Made the BAMfile  $header->text() method read/write, allowing limited modification of
      header fields.
    * Fixed MD processing again to correctly handle insertions into the reference sequence.
      
Version 1.17
    * Fixed bug in processing of MD tag that returned incorrect reference sequence when alignment
      contains soft clips.
    * Fixed processing of "A" tags so that they return the appropriate 1 character string rather than
      undef.

Version 1.16
    * No longer attempt to build BAM index automatically if the .bai file is
      either missing or out of date. Pass -autoindex=>1 to Bio::DB::Sam to
      restore original behavior.

Version 1.15